# handControl

./: README.md  config.json  config_loader.py  debug_info.py  gesture_detection.py  hand_utils.py  main.py  media_control.py  mouse_control.py  processing_thread.py  pyproject.toml  scroll_control.py  video_capture.py  volume_control.py
