[project]
name = "handcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comtypes>=1.4.11",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pycaw>=20240210",
    "pyinput>=0.3.2",
    "pynput>=1.8.1",
]
